Feature/cax 1 prs@273 additional api validation part 2 (#208)
* Adding more input validation scenarios for parts attribute update

* Ignore response array order as its dynamic

* Adding size validation on parts relationship input

* Adding more test and validation for parts relationship update

* Rename validation constant

* Using custom space & empty constant rather then apache lang3 library

* Update max/min size for relationship and aspects update as pr discussion

* IT test update to use variable whitespaces