@@ -14,10 +14,14 @@ import java.util.List;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Function;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
 import static io.restassured.RestAssured.given;
+import static net.catenax.prs.dtos.ValidationConstants.INPUT_FIELD_MAX_LENGTH;
+import static net.catenax.prs.dtos.ValidationConstants.RELATIONSHIP_UPDATE_LIST_MAX_SIZE;
 import static net.javacrumbs.jsonunit.assertj.JsonAssertions.assertThatJson;
+import static net.javacrumbs.jsonunit.core.Option.IGNORING_ARRAY_ORDER;
 import static org.assertj.core.api.Assertions.assertThat;
 
 public class UpdatePartRelationshipTest extends BrokerProxyIntegrationTestBase {
@@ -54,9 +58,9 @@ public class UpdatePartRelationshipTest extends BrokerProxyIntegrationTestBase {
             .statusCode(HttpStatus.BAD_REQUEST.value());
     }
 
-    @ParameterizedTest(name = "{index} {1}")
+    @ParameterizedTest(name = "{index} {0}")
     @MethodSource("provideInvalidRelationships")
-    public void updatedPartsAttributesWithInvalidRelationships_failure(List<PartRelationshipUpdate> relationships, String expectedError) {
+    public void updatedPartsAttributesWithInvalidRelationships_failure(String name, List<PartRelationshipUpdate> relationships, List<String> expectedErrors) {
 
         var response =
             given()
@@ -70,7 +74,8 @@ public class UpdatePartRelationshipTest extends BrokerProxyIntegrationTestBase {
                 .extract().asString();
 
         assertThatJson(response)
-                .isEqualTo(generateResponse.invalidArgument(List.of(expectedError)));
+                .when(IGNORING_ARRAY_ORDER)
+                .isEqualTo(generateResponse.invalidArgument(expectedErrors));
     }
 
     @Test
@@ -141,46 +146,103 @@ public class UpdatePartRelationshipTest extends BrokerProxyIntegrationTestBase {
      */
     private static Stream<Arguments> provideInvalidRelationships() {
         return Stream.of(
-                Arguments.of(null, "relationships:must not be empty"),
-                Arguments.of(Collections.emptyList(), "relationships:must not be empty"),
-                Arguments.of(List.of(generate.partRelationshipUpdate().toBuilder()
+                Arguments.of("Null relationship",
+                        null,
+                        List.of("relationships:must not be empty")),
+                Arguments.of("Empty relationship",
+                        Collections.emptyList(),
+                        List.of("relationships:must not be empty",
+                        "relationships:size must be between 1 and 1000")),
+                Arguments.of("Too many relationships",
+                        IntStream.rangeClosed(0, RELATIONSHIP_UPDATE_LIST_MAX_SIZE).mapToObj(i -> generate.partRelationshipUpdate())
+                                .collect(Collectors.toList()),
+                        List.of("relationships:size must be between 1 and 1000")),
+                Arguments.of("Relationship with parent and child as null",
+                        List.of(generate.partRelationshipUpdate().toBuilder()
                         .withRelationship(generateDto.partRelationship().toBuilder()
                                 .withChild(null)
-                                .build())
-                        .build()), "relationships[0].relationship.child:must not be null"),
-                Arguments.of(List.of(generate.partRelationshipUpdate().toBuilder()
-                        .withRelationship(generateDto.partRelationship().toBuilder()
                                 .withParent(null)
                                 .build())
-                        .build()), "relationships[0].relationship.parent:must not be null"),
-                Arguments.of(List.of(generate.partRelationshipUpdate().toBuilder()
+                        .build()),
+                        List.of("relationships[0].relationship.child:must not be null",
+                        "relationships[0].relationship.parent:must not be null")),
+                Arguments.of("Relationship with child part OneID and ObjectID as null",
+                        List.of(generate.partRelationshipUpdate().toBuilder()
                         .withRelationship(generateDto.partRelationship().toBuilder()
                                 .withChild(generateDto.partId().toBuilder()
                                         .withOneIDManufacturer(null)
-                                        .build())
-                                .build())
-                        .build()), "relationships[0].relationship.child.oneIDManufacturer:must not be blank"),
-                Arguments.of(List.of(generate.partRelationshipUpdate().toBuilder()
-                        .withRelationship(generateDto.partRelationship().toBuilder()
-                                .withChild(generateDto.partId().toBuilder()
                                         .withObjectIDManufacturer(null)
                                         .build())
                                 .build())
-                        .build()), "relationships[0].relationship.child.objectIDManufacturer:must not be blank"),
-                Arguments.of(List.of(generate.partRelationshipUpdate().toBuilder()
+                        .build()),
+                        List.of("relationships[0].relationship.child.oneIDManufacturer:must not be blank",
+                        "relationships[0].relationship.child.objectIDManufacturer:must not be blank")),
+                Arguments.of("Relationship with parent part OneID and ObjectID as null",
+                        List.of(generate.partRelationshipUpdate().toBuilder()
                         .withRelationship(generateDto.partRelationship().toBuilder()
                                 .withParent(generateDto.partId().toBuilder()
                                         .withOneIDManufacturer(null)
-                                        .build())
-                                .build())
-                        .build()), "relationships[0].relationship.parent.oneIDManufacturer:must not be blank"),
-                Arguments.of(List.of(generate.partRelationshipUpdate().toBuilder()
-                        .withRelationship(generateDto.partRelationship().toBuilder()
-                                .withParent(generateDto.partId().toBuilder()
                                         .withObjectIDManufacturer(null)
                                         .build())
                                 .build())
-                        .build()), "relationships[0].relationship.parent.objectIDManufacturer:must not be blank")
+                        .build()),
+                        List.of("relationships[0].relationship.parent.oneIDManufacturer:must not be blank",
+                        "relationships[0].relationship.parent.objectIDManufacturer:must not be blank")),
+                Arguments.of("Relationship with parent and child part OneID and ObjectID as empty",
+                        List.of(generate.partRelationshipUpdate().toBuilder()
+                        .withRelationship(generateDto.partRelationship().toBuilder()
+                                .withChild(generateDto.partId().toBuilder()
+                                        .withOneIDManufacturer(EMPTY)
+                                        .withObjectIDManufacturer(EMPTY)
+                                        .build())
+                                .withParent(generateDto.partId().toBuilder()
+                                        .withOneIDManufacturer(EMPTY)
+                                        .withObjectIDManufacturer(EMPTY)
+                                        .build())
+                                .build())
+                        .build()),
+                        List.of("relationships[0].relationship.parent.objectIDManufacturer:size must be between 1 and 10000",
+                        "relationships[0].relationship.parent.oneIDManufacturer:must not be blank",
+                        "relationships[0].relationship.parent.objectIDManufacturer:must not be blank",
+                        "relationships[0].relationship.parent.oneIDManufacturer:size must be between 1 and 10000",
+                        "relationships[0].relationship.child.objectIDManufacturer:size must be between 1 and 10000",
+                        "relationships[0].relationship.child.oneIDManufacturer:must not be blank",
+                        "relationships[0].relationship.child.objectIDManufacturer:must not be blank",
+                        "relationships[0].relationship.child.oneIDManufacturer:size must be between 1 and 10000")),
+                Arguments.of("Relationship with parent and child part OneID and ObjectID as whitespace",
+                        List.of(generate.partRelationshipUpdate().toBuilder()
+                        .withRelationship(generateDto.partRelationship().toBuilder()
+                                .withChild(generateDto.partId().toBuilder()
+                                        .withOneIDManufacturer(faker.regexify(WHITESPACE_REGEX))
+                                        .withObjectIDManufacturer(faker.regexify(WHITESPACE_REGEX))
+                                        .build())
+                                .withParent(generateDto.partId().toBuilder()
+                                        .withOneIDManufacturer(faker.regexify(WHITESPACE_REGEX))
+                                        .withObjectIDManufacturer(faker.regexify(WHITESPACE_REGEX))
+                                        .build())
+                                .build())
+                        .build()),
+                        List.of("relationships[0].relationship.parent.oneIDManufacturer:must not be blank",
+                        "relationships[0].relationship.parent.objectIDManufacturer:must not be blank",
+                        "relationships[0].relationship.child.oneIDManufacturer:must not be blank",
+                        "relationships[0].relationship.child.objectIDManufacturer:must not be blank")),
+                Arguments.of("Relationship with parent and child part OneID and ObjectID too long",
+                        List.of(generate.partRelationshipUpdate().toBuilder()
+                        .withRelationship(generateDto.partRelationship().toBuilder()
+                                .withChild(generateDto.partId().toBuilder()
+                                        .withOneIDManufacturer(faker.lorem().characters(INPUT_FIELD_MAX_LENGTH + 1))
+                                        .withObjectIDManufacturer(faker.lorem().characters(INPUT_FIELD_MAX_LENGTH + 1))
+                                        .build())
+                                .withParent(generateDto.partId().toBuilder()
+                                        .withOneIDManufacturer(faker.lorem().characters(INPUT_FIELD_MAX_LENGTH + 1))
+                                        .withObjectIDManufacturer(faker.lorem().characters(INPUT_FIELD_MAX_LENGTH + 1))
+                                        .build())
+                                .build())
+                        .build()),
+                        List.of("relationships[0].relationship.parent.oneIDManufacturer:size must be between 1 and 10000",
+                        "relationships[0].relationship.parent.objectIDManufacturer:size must be between 1 and 10000",
+                        "relationships[0].relationship.child.oneIDManufacturer:size must be between 1 and 10000",
+                        "relationships[0].relationship.child.objectIDManufacturer:size must be between 1 and 10000"))
         );
     }
 }
